<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageViewDetail"
        android:layout_width="300dp"
        android:layout_height="200dp"
       android:layout_margin="20dp"
        android:layout_gravity="center"
       android:src="@drawable/ic_launcher_background"

         />

    <EditText
        android:id="@+id/artNameDetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="Enter Art Name"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/artistNameDetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="Enter Artist Name"
        android:inputType="text"
         />

    <EditText
        android:id="@+id/artYearDetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="Enter Art Year"
        android:inputType="text"
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="SAVE"
         />
</LinearLayout>